# static-assets-rs

./: Cargo.toml
.circleci/: config.yml
actix-web/: Cargo.toml
actix-web/examples/: serve.rs
actix-web/examples/assets/: index.html  style.css
actix-web/src/: lib.rs
actix-web/tests/: smoke.rs
axum/: Cargo.toml
axum/src/: lib.rs
axum/tests/: smoke.rs
codegen/: Cargo.toml
codegen-tests/: Cargo.toml  build.rs
codegen-tests/tests/: codegen-canary.rs
codegen/src/: lib.rs
core/: Cargo.toml
core/src/: lib.rs
hyper/: Cargo.toml
hyper/examples/: hyper-serve.rs
hyper/examples/assets/: index.html  style.css
hyper/src/: lib.rs
hyper/tests/: smoke.rs
macros/: Cargo.toml
macros/src/: lib.rs
macros/tests/: smoke.rs
warp/: Cargo.toml
warp/src/: lib.rs
warp/tests/: smoke.rs
