[package]
name = "static-assets-actix"
version = "0.1.0"
authors = ["Ceri Storey <cez@necrofish.org.uk>"]
edition = "2018"

[dependencies]
actix-web = "1.0"
static-assets = { version = "^0.1", path = "../core" }
log = "0.4.6"
mime = "0.3.13"
base64 = "0.11.0"
futures = "0.1.27"
actix-service = "0.4.0"
[dev-dependencies]
static-assets-macros = { version = "^0.1", path = "../macros" }
env_logger = "0.7.0"
log = "0.4.6"
