[package]
name = "static-assets-actix"
version = "0.1.0"
authors = ["Ceri Storey <cez@necrofish.org.uk>"]
edition = "2018"

[dependencies]
actix-web = "3.0.1"
static-assets = { version = "^0.1", path = "../core" }
log = "0.4.6"
mime = "0.3.13"
base64 = "0.13.0"
futures = "0.3.1"
actix-service = "1.0.1"
[dev-dependencies]
static-assets-macros = { version = "^0.1", path = "../macros" }
env_logger = "0.7.0"
log = "0.4.6"
actix-rt = "1.0.0"
