[package]
name = "static-assets-hyper"
version = "0.1.0"
authors = ["Ceri Storey <cez@necrofish.org.uk>"]
edition = "2021"

[dependencies]
anyhow = { version = "1.0.56", features = [ "backtrace" ] }
hyper = { version = "0.14.17", features=["tcp", "http1", "server"]}
tokio = { version = "1.17.0", features = ["rt"] }
static-assets = { version = "^0.1", path = "../core" }
static-assets-macros = { version = "^0.1", path = "../macros" }
futures = "0.3.21"
tower = "0.4.12"
base64 = "0.21"
tracing = "0.1.32"

[dev-dependencies]
tokio = { version="1.17.0", features=["full"] }
tower = { version = "0.4.12", features=["util"] }
typed-headers = "0.2.0"
mime = "0.3.16"
axum = "0.6.1"
tracing-subscriber = "0.3.9"
