[package]
name = "static-assets-hyper"
version = "0.2.0"
authors = ["Ceri Storey <cez@necrofish.org.uk>"]
edition = "2021"

[dependencies]
hyper = { version = "1.0.1", features=["http1", "server"]}
tokio = { version = "1.17.0", features = ["rt"] }
static-assets = { version = "^0.2", path = "../core" }
static-assets-macros = { version = "^0.2", path = "../macros" }
futures = "0.3.21"
base64 = "0.21"
tracing = "0.1.32"
bytes = "1.5.0"
http-body-util = "0.1.0"

[dev-dependencies]
anyhow = { version = "1.0.56", features = [ "backtrace" ] }
tokio = { version="1.17.0", features=["full"] }
tower = { version = "0.4.12", features=["util"] }
mime = "0.3.16"
axum = "0.7.4"
tracing-subscriber = "0.3.9"
hyper-util = { version = "0.1.1", features = ["server", "http1", "tokio"] }
http-body-util = "0.1.0"
headers = "0.4.0"
