[package]
name = "static-assets-macros"
version = "0.1.0"
authors = ["Ceri Storey <cez@necrofish.org.uk>"]
edition = "2018"
workspace = "../"

[lib]
proc-macro = true

[dev-dependencies]
static-assets = { version = "^0.1", path = "../core" }
[dependencies]
quote = "1.0.0"
syn = "0.15.27"
failure = "0.1.5"
lazy_static = "1.3.0"
walkdir = "2.2.7"
proc-macro2 = "0.4.27"
mime_guess = "2.0.0"
blake2 = "0.8.0"
