[package]
name = "static-assets-warp"
version = "0.1.0"
authors = ["Ceri Storey <cez@necrofish.org.uk>"]
edition = "2018"

[dependencies]
warp = "0.1.13"
static-assets = { version = "^0.1", path = "../core" }
bytes = "0.4.11"
mime = "0.3.13"
base64 = "0.10.1"
futures = "0.1.25"

[dev-dependencies]
static-assets-macros = { version = "^0.1", path = "../macros" }
